# game-scheduler

./: .actrc  .dockerignore  .env.example  .env.integration  .gitignore  .jscpd.json  .mcp.json  .pre-commit-config.yaml  .secrets.example  CLAUDE.md  DEPLOYMENT_QUICKSTART.md  DOCKER_CACHE_OPTIMIZATION.md  DOCKER_PORTS.md  Makefile  README.md  README.txt  RUNTIME_CONFIG.md  TESTING_COVERAGE.md  TESTING_E2E.md  TESTING_OAUTH.md  alembic.ini  complexipy.json  compose.e2e.yaml  compose.int.yaml  compose.override.yaml  compose.prod.yaml  compose.production.yaml  compose.restore.yaml  compose.staging.yaml  compose.test.yaml  compose.yaml  conftest.py  docker-compose.base.yml  docker-compose.integration.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_oauth.py  user-supremicy.txt
.claude/: config-sync-manifest.json
.claude/agents/: task-planner.md  task-researcher.md
.claude/commands/: brainstorm.md  commit.md  implement-background-task-silent-failure-fix.md  implement-participant-reposition-bug.md  verify-code.md
.copilot-tracking/changes/: 20251114-discord-game-scheduling-system-changes.md  20251127-database-backed-notification-scheduler-changes.md  20251127-frontend-docker-build-optimization-changes.md  20251127-validation-on-submit-changes.md  20251128-environment-initialization-service-changes.md  20251129-game-model-refactor-changes.md  20251130-fix-test-warnings-changes.md  20251130-remove-guild-name-from-database-changes.md  20251201-game-template-system-changes.md  20251201-remove-channel-name-from-database-changes.md  20251203-celery-elimination-notification-consolidation-changes.md  20251203-ui-cleanup-changes.md  20251204-api-authorization-audit-changes.md  20251204-fix-authorization-test-failures-changes.md  20251204-scheduler-daemon-consolidation-changes.md  20251205-daemon-bot-message-reliability-changes.md  20251205-rabbitmq-runtime-configuration-changes.md  20251206-docker-base-image-updates-changes.md  20251206-opentelemetry-integration-changes.md  20251206-opentelemetry-observability-changes.md  20251207-docker-development-volume-mount-changes.md  20251210-alloy-self-monitoring-changes.md  20251210-test-instance-deployment-issues-changes.md  20251211-docker-compose-environment-reorganization-changes.md  20251211-rabbitmq-messaging-cleanup-changes.md  20251213-role-service-missing-method-changes.md  20251214-nektos-act-local-testing-changes.md  20251214-npm-warnings-elimination-changes.md  20251214-npm-warnings-phase2-react-upgrade-changes.md  20251214-npm-warnings-phase3-mui-upgrade-changes.md  20251214-npm-warnings-phase4-utilities-upgrade-changes.md  20251214-precommit-hooks-with-tests-changes.md  20251215-dependency-version-audit-changes.md  20251216-docker-in-docker-act-path-mounting-changes.md  20251217-redis-to-valkey-migration-changes.md  (+93 more)
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: copilot-instructions.md
alembic/: env.py
config.template/: README.md  env.template
docker/: Caddyfile.prod  Caddyfile.staging  api.Dockerfile  backup-entrypoint.sh  backup-script.sh  backup.Dockerfile  bot-entrypoint.sh  bot.Dockerfile  frontend-config.template.js  frontend-entrypoint.sh  frontend-nginx.conf  frontend.Dockerfile  init-entrypoint.sh  init.Dockerfile  notification-daemon.Dockerfile  redis-entrypoint.sh  restore-script.sh  retry.Dockerfile  scheduler.Dockerfile  status-transition-daemon.Dockerfile  test-entrypoint.sh  test.Dockerfile
docs/: DATABASE_SCHEMA.md  DEFERRED_EVENT_PUBLISHING.md  GUILD-ADMIN.md  HOST-GUIDE.md  LOCAL_TESTING_WITH_ACT.md  PLAYER-GUIDE.md  oauth-flow.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
grafana-alloy/: TESTING_PHASE5.md  TESTING_PHASE6.md  config.alloy
history/: research-chat.md
rabbitmq/: definitions.json  rabbitmq.conf
scripts/: add-copyright  autocopyright-wrapper.sh  backup-now.sh  check-copyright-precommit.sh  check-copyright.py  check_ai_config_sync.py  check_commit_duplicates.py  check_diff_coverage.py  check_diff_coverage_frontend.py  check_lint_suppressions.py  check_test_assertions.py  coverage-report.sh  data_migration_create_default_templates.py  generate-copyright-references.sh  generate_trace_record.sh  init_rabbitmq.py  migrate_postgres_15_to_17.sh  mutmut-logic-survivors.py  restore.sh  run-backup-tests.sh  run-e2e-tests.sh  run-frontend-coverage.sh  run-integration-tests.sh  run-unit-tests.sh  show_trace_counts.sh  verify_button_states.py
services/: __init__.py
shared/: __init__.py  database.py  database_objects.py  message_formats.py  pg_listen.py  setup.py  telemetry.py  version.py
templates/: agpl-template.jinja2  mit-template.jinja2
tests/: __init__.py  conftest.py
(+1305 files in other folders)
